# web-crawler

./: main.py  notes.txt  pyproject.toml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
src/: main.py
src/domain/models/: __init__.py  page.py  queue.py  run.py  source.py
src/domain/ports/: __init__.py  page.py  queue.py  run.py  source.py
src/domain/rules/: __init__.py  url.py
src/infrastructure/: config.py
src/infrastructure/db/: supabase.py
src/infrastructure/repositories/: __init__.py  page.py  queue.py  run.py  source.py
src/ingestion/crawling/: __init__.py  http_client.py  link_extractor.py  rate_limiter.py  robots.py
src/ingestion/use_cases/: __init__.py  crawl.py
src/interfaces/cli/: crawl.py
supabase/: config.toml  schema.sql
supabase/migrations/: 20260111154830_create_crawl_schema.sql  20260111191203_add_queue_rpc.sql
