[project]
name = "answer-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml>=6.0.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "supabase>=2.27.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.14.11",
]
